user_service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
    group: db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users    # indicates which Pods (with which labeles) need be handled by this Deployment
  template:
    metadata:         # indicates the metadata that will be added to each Pod
      labels:
        app: users
        group: db
    spec:
      containers:     # defines a running container inside the Pod
        - name: user_service
          image: divyajyotidas15/user-service-image:1.0.0.0

          ports:
            - containerPort: 8770   # which port of the container is exposed to the Pod
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
