user_service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    group: db
spec:
  type: ClusterIP
  selector:             # indicates into which pods ClusterIP provides access
    app: users
  ports:
    - port: 8770        # port exposed outside ClusterIP
      targetPort: 8770   # port exposed by Pod
